--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 # scSIGTest
 
-Basic package to test the enrichment or the depletion of a given signature in each cell of a scRNAseq dataset. It is based on the detection rate of genes of the signature. Is the number of detected genes in the signature higher or lower to what is expected randomly in randomly selected sets of genes of the same size than the  signature ? Random sets of genes of the same size than the interest set of genes are created to generate a null distribution of detection rate for each cell of the dataset. Then the detection rate of the interest signature is compared to this distribution and a kind of p-value is computed based on this distribution allow to cells in three categories : cells enriched for the signature, cells depleted for the signature or cells without significant enrichment or depetion of the signature.   
+<p> Basic package to test the enrichment or the depletion of a given signature in each cell of a scRNAseq dataset. It is based on the detection rate of genes of the signature. Is the number of detected genes in the signature higher or lower to what is expected randomly in randomly selected sets of genes of the same size than the  signature ? Random sets of genes of the same size than the interest set of genes are created to generate a null distribution of detection rate for each cell of the dataset. Then the detection rate of the interest signature is compared to this distribution and a kind of p-value is computed based on this distribution allow to cells in three categories : cells enriched for the signature, cells depleted for the signature or cells without significant enrichment or depetion of the signature. </p>
 
